Bug 364872 - Adblock not working because list(s) can't be saved on disk
Summary: Adblock not working because list(s) can't be saved on disk
Status: RESOLVED FIXED
Alias: None
Product: akregator
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-06-28 20:38 UTC by Ömer
Modified: 2016-06-29 05:10 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ömer 2016-06-28 20:38:19 UTC
For some reason Akregator uses kmail2's folder to save adblock lists.
Meaning at every start it shows a notification "could not download blocklist" when infact it does but can't save them. (Maybe correct the error message here since it is a notification?)

To be specific: The folder akregator tries to use is ".local/share/kmail2" i found this because when I started Akregator via konsole it also complains about being unable to open ".local/share/kmail2/adblockrules_local". 
After i created the kmail2 folder (i don't use kmail so the folder wasn't there) Akregator created adblockrules-0 and adblockrules-1 the error message about adblockrules_local also went away although adblockrules_local still isn't there.

btw the current version (5.2.2) is missing in the list.

Reproducible: Always

Steps to Reproduce:
1. Add a filter list

Actual Results:  
The ads are still there since Akregator can't save the list and doesn't use it.

Expected Results:  
Ads get filtered according to list

Maybe the blocklists should be saved in a seperate folder which is not used by any application like e.g.:

".local/share/filterlists/akregator_adblockrules-X"
Comment 1 Laurent Montel 2016-06-29 05:09:45 UTC
You are totally right.
It's an error to use same directory as kmail I didn't think that it can be not created.

For 5.3 I will change it.

But I will fix in 5.2 soon.

Regards
Comment 2 Laurent Montel 2016-06-29 05:10:28 UTC
Git commit 6f209856ea4ac67b74465126387f7111a949bbc3 by Montel Laurent.
Committed on 29/06/2016 at 05:10.
Pushed by mlaurent into branch 'Applications/16.04'.

Fix Bug 364872 - Adblock not working because list(s) can't be saved on disk

FIXED-IN: 5.2.3

M  +4    -0    messageviewer/src/adblock/adblockmanager.cpp

http://commits.kde.org/messagelib/6f209856ea4ac67b74465126387f7111a949bbc3