Fix Bug 364872 - Adblock not working because list(s) can't be saved on disk

FIXED-IN: 5.2.3
BUG: 364872